@@ -81,6 +81,12 @@
      Un-static ssh_exchange_identification(), part of a larger change from
      Martin Forssen and needed for upcoming changes.
      ok markus@
+   - andreas@cvs.openbsd.org 2009/05/28 16:50:16
+     [sshd.c packet.c serverloop.c monitor_wrap.c clientloop.c sshconnect.c
+      monitor.c]
+     Keep track of number of bytes read and written. Needed for upcoming
+     changes. Most code from Martin Forssen, maf at appgate dot com.
+     ok markus@
 
 20090616
  - (dtucker) [configure.ac defines.h] Bug #1607: handle the case where fsid_t
